# kobold

./: .gitignore  README.md  kobuild.lua  kobuild.toml  limine.conf  makeiso.sh  meson.build  x86_64.ini
.github/workflows/: meson.yml
res/linker/: linker-x86_64.ld
src/: bootloader.c  keyboard.c
src/arch/x86_64/: alloc.c  gdt.c  idt.c  init.c  pic.c  pmm.c  thread.c  vmm.c
src/arch/x86_64/asm/: gdt.asm  isr.asm  stack.asm
src/arch/x86_64/drivers/: ps2keyboard.c
src/include/: bits.h  bootloader.h  keyboard.h  limine.h  panic.h  spinlock.h
src/include/arch/x86_64/: cpu.h  gdt.h  idt.h  pic.h  pmm.h  thread.h  vmm.h
src/include/arch/x86_64/drivers/: ps2keyboard.h
src/include/kshell/: kshell.h
src/include/libc/: cdefs.h  limits.h  math.h  stdarg.h  stdbool.h  stddef.h  stdint-gcc.h  stdint.h  stdio.h  stdlib.h  string.h
src/include/term/: term.h
src/kshell/: kshell.c
src/libc/: abort.c
src/libc/stdio/: printf.c  putchar.c  puts.c
src/libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
src/term/: term.c
